--- a/simx/config.yaml.example
+++ b/simx/config.yaml.example
@@ -1,4 +1,4 @@
-# Example evaluation configuration with all datasets and libraries enabled
+# Example evaluation configuration with most datasets and libraries enabled
 
 ends:
   - se
@@ -12,11 +12,11 @@ datasets:
   - sim6
 
 genomes:
-  - drosophila
+  - fruitfly
   - maize
   - CHM13
   - rye
-  - chrY
+#  - chrY
 
 read-lengths:
   - 50
@@ -26,6 +26,9 @@ read-lengths:
   - 200
   - 300
   - 500
+  - 1000
+  - 5000
+  - 10000
 
 # Programs to run in addition to strobealign
 programs:
