--- a/simx/Snakefile
+++ b/simx/Snakefile
@@ -93,34 +93,24 @@ rule bwa_mem_paired_end:
 # Map reads with minimap2
 
 rule minimap2_index:
-    output: "genomes/{genome}.fa.mm2index"
+    output: "genomes/{genome}.fa.{profile}.mm2index"
     input: "genomes/{genome}.fa"
     threads: 8
     shell:
-        "minimap2 -t {threads} -d {output} {input}"
+        "minimap2 -x {wildcards.profile} -t {threads} -d {output} {input}"
 
 
-rule minimap2_index_sr:
-    output: "genomes/{genome}.fa.mm2index.sr"
-    input: "genomes/{genome}.fa"
-    threads: 8
-    shell:
-        "minimap2 -t {threads} -x sr -d {output} {input}"
-
-
-def minimap_short_reads(wildcards):
+def minimap2_profile(wildcards):
     """
-    minimap2’s option -x sr (for short reads) is advantageous up to
-    approximately read length 400
+    minimap2’s sr (short reads) profile is advantageous up to
+    approximately read length 500
     """
-    return " -x sr" if int(wildcards.read_length) <= 400 else ""
+    return "sr" if int(wildcards.read_length) <= 500 else "lr:hq"
 
 
 def minimap2_index(wildcards):
-    if int(wildcards.read_length) <= 400:
-        return "genomes/{genome}.fa.mm2index.sr"
-    else:
-        return "genomes/{genome}.fa.mm2index"
+    profile = minimap2_profile(wildcards)
+    return f"genomes/{wildcards.genome}.fa.{profile}.mm2index"
 
 
 rule minimap2_single_end:
@@ -131,11 +121,11 @@ rule minimap2_single_end:
         r1_fastq="datasets/{dataset}/{genome}-{read_length}/1.fastq.gz",
     log:
         "runs/minimap2/{dataset}-{genome}-{read_length}/se.bam.log"
-    params: sr=minimap_short_reads
+    params: profile=minimap2_profile
     threads: 8
     shell:
         "cat {input} > /dev/null; "
-        "/usr/bin/time -v minimap2{params.sr} -a -t {threads} {input.index} {input.r1_fastq} 2> {log}.tmp"
+        "/usr/bin/time -v minimap2 -x {params.profile} -a -t {threads} {input.index} {input.r1_fastq} 2> {log}.tmp"
         " | grep -v '^@PG'"
         " | samtools view --no-PG -o {output.bam}.tmp.bam -"
         "\n mv -v {output.bam}.tmp.bam {output.bam}"
@@ -151,11 +141,11 @@ rule minimap2_paired_end:
         r2_fastq="datasets/{dataset}/{genome}-{read_length}/2.fastq.gz",
     log:
         "runs/minimap2/{dataset}-{genome}-{read_length}/pe.bam.log"
-    params: sr=minimap_short_reads
+    params: profile=minimap2_profile
     threads: 8
     shell:
         "cat {input} > /dev/null; "
-        "/usr/bin/time -v minimap2{params.sr} -a -t {threads} --frag=yes {input.index} {input.r1_fastq} {input.r2_fastq} 2> {log}.tmp"
+        "/usr/bin/time -v minimap2 -x {params.profile} -a -t {threads} --frag=yes {input.index} {input.r1_fastq} {input.r2_fastq} 2> {log}.tmp"
         " | grep -v '^@PG'"
         " | samtools view --no-PG -o {output.bam}.tmp.bam -"
         "\n mv -v {output.bam}.tmp.bam {output.bam}"
@@ -170,11 +160,11 @@ rule minimap2_paf_single_end:
         r1_fastq="datasets/{dataset}/{genome}-{read_length}/1.fastq.gz",
     log:
         "runs/minimap2/{dataset}-{genome}-{read_length}/se.paf.log"
-    params: sr=minimap_short_reads
+    params: profile=minimap2_profile
     threads: 8
     shell:
         "cat {input} > /dev/null; "
-        "/usr/bin/time -v minimap2{params.sr} -t {threads} {input.index} {input.r1_fastq} 2> {log}.tmp"
+        "/usr/bin/time -v minimap2 -x {params.profile} -t {threads} {input.index} {input.r1_fastq} 2> {log}.tmp"
         " | igzip > {output.paf}.tmp.gz"
         "\n mv -v {output.paf}.tmp.gz {output.paf}"
         "\n mv -v {log}.tmp {log}"
@@ -189,11 +179,11 @@ rule minimap2_paf_paired_end:
         r2_fastq="datasets/{dataset}/{genome}-{read_length}/2.fastq.gz",
     log:
         "runs/minimap2/{dataset}-{genome}-{read_length}/pe.paf.log"
-    params: sr=minimap_short_reads
+    params: profile=minimap2_profile
     threads: 8
     shell:
         "cat {input} > /dev/null; "
-        "/usr/bin/time -v minimap2{params.sr} -t {threads} --frag=yes {input.index} {input.r1_fastq} {input.r2_fastq} 2> {log}.tmp"
+        "/usr/bin/time -v minimap2 -x {params.profile} -t {threads} --frag=yes {input.index} {input.r1_fastq} {input.r2_fastq} 2> {log}.tmp"
         " | igzip > {output.paf}.tmp.gz"
         "\n mv -v {output.paf}.tmp.gz {output.paf}"
         "\n mv -v {log}.tmp {log}"
